--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2021"
 
 [dependencies]
 reqwest = "0.11"
+metadata = "0.1.8"
 tokio = { version = "1", features = ["full"] }
 xml-rs = "0.8"
